# rust-data-engineering

./: .gitignore  404.html  LICENSE  Makefile  README.md  bashrc  index.html  print.html  searchindex.js  searchindex.json  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yml  release.yml  rustfmt.yml  tests.yml
binaryheap-fruit/: Cargo.toml
binaryheap-fruit/src/: main.rs
btree-language/: Cargo.toml
btree-language/src/: main.rs
btreeset-fruit/: Cargo.toml
caesar-cipher/: Cargo.toml
caesar-cipher-cli/: Cargo.toml
calc-cli-with-tests/: Cargo.toml
cli-customize-fruit-salad/: Cargo.toml  fruits.csv
cli-customize-fruit-salad/src/: lib.rs  main.rs
cli-salad/: Cargo.toml
cli-salad/src/: lib.rs  (+1 more)
community-detection/: Cargo.toml
csv-demo/: Cargo.toml
data-eng-rust-tutorial/: book.toml
data-race/: Cargo.toml
decoder-ring/: Cargo.toml
dining-philosopher/: Cargo.toml
graph-centrality-ufc/: Cargo.toml
graph-visualize/: Cargo.toml
hashmap-count/: Cargo.toml
hashmap-language/: Cargo.toml
hashset-fruit/: Cargo.toml
homophonic-cipher/: Cargo.toml
immutable/: Cargo.toml  immutable-py.py
immutable-testing/: Cargo.toml
linked-list-fruit-salad/: Cargo.toml
lisbon-shortest-path/: Cargo.toml
lowmem-fruit-salad/: Cargo.toml
mutable-fruit-salad/: Cargo.toml
pagerank/: Cargo.toml
polars-hello-world-code-whisperer/: Cargo.toml
print-data-structs/: Cargo.toml
sha3-dupe-detector/: Cargo.toml
vecdeque-fruit-salad/: Cargo.toml
vector-fruit-salad/: Cargo.toml
webcrawl-wikipedia-rayon/: Cargo.toml
(+37 files in other folders)
